# testing

./: BUILD.bazel
config/jobs/cert-manager/: venafi-presubmits.yaml
config/jobs/testing/: testing-trusted.yaml
images/builder/: ci-runner.sh
tools/image-bumper/: BUILD.bazel
